# OWCA_AIFB_26Jan_Challenge

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
backend/: .env.example  .env.test  .flake8  Dockerfile  README.md  check_db.py  demo_cultural_guidance.py  demo_market_analytics.py  demo_payment_system.py  demo_price_analysis.py  demo_translation.py  demo_voice.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run.py  seed_data.py  seed_database.py  seed_demo_data.py  test_geographic_filtering.py  test_geographic_simple.py  test_integration.py  test_integration_checkpoint.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  deps.py
backend/app/core/: config.py  database.py  dependencies.py  exceptions.py  logging.py  redis.py  security.py
backend/app/data/: cultural_negotiation_database.py  market_analytics_data.py  sample_location_data.py  sample_msp_data.py  sample_seasonal_factors.py
backend/app/db/: __init__.py  mongodb.py  redis.py
backend/app/models/: __init__.py  auth.py  chat.py  common.py  market_analytics.py  market_data.py  negotiation.py  payment.py  personalized_insights.py  price.py  product.py  review.py  translation.py  user.py  voice.py  webrtc.py
backend/app/services/: __init__.py  agmarknet_service.py  ai_service.py  auth_service.py  background_tasks.py  chat_service.py  cultural_guidance_service.py  elasticsearch_service.py  image_service.py  market_analytics_service.py  market_data_service.py  negotiation_service.py  payment_service.py  price_discovery_service.py  (+12 more)
backend/tests/: __init__.py  conftest.py  test_agmarknet_service.py  test_auth.py  test_auth_properties.py  test_auth_service.py  test_broadcast_group_negotiation.py  test_broadcast_message_property.py  test_chat_translation_property.py  test_chat_translation_property_simple.py  test_credibility_score_property.py  test_credit_terms_scheduling_property.py  test_cultural_guidance_property.py  test_cultural_guidance_unit.py  test_demand_forecasting_reliability_property.py  test_escrow_credit_basic.py  test_escrow_credit_management.py  test_escrow_service_availability_property.py  test_geographic_price_filtering_property.py  test_historical_data_completeness.py  test_image_recognition_property.py  test_market_analytics_basic.py  test_market_data_service.py  test_multi_source_price_aggregation_property.py  test_multilingual_invoice_generation_property.py  test_multilingual_rating_property.py  test_payment_basic.py  test_payment_integration.py  test_personalized_insights_basic.py  test_personalized_insights_generation_property.py  test_personalized_insights_property_simple.py  test_personalized_insights_unit.py  test_price_analysis.py  test_price_analysis_properties.py  test_price_discovery_properties.py  test_price_recommendation_property.py  test_product_search.py  test_quality_assessment_property.py  test_quantity_estimation_property.py  test_review_system.py  (+9 more)
(+134 files in other folders)
